--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
 body {
-    font-family: sans-serif;
-    background: #f4f4f4;
-    margin: 0;
-    padding: 2em;
-    color: #222;
+    font-family: 'UnifrakturCook', 'Old English Text MT', serif;
 }
